[add] titlebar buttons functionality

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -32,9 +32,9 @@
     <section class="top-bar">
       <span class="current-folder">Local Disk(C:)</span>
       <section class="controls-wrapper">
-        <button class="control-button"> <img src="../../img/minimize-icon.svg" class="controls"> </button>
-        <button class="control-button"> <img src="../../img/maximize-icon.svg" class="controls"> </button>
-        <button class="control-button control-button-close"> <img src="../../img/close-icon.svg" class="controls"> </button>
+        <button id="window-button-minimize" class="control-button"> <img src="../../img/minimize-icon.svg" class="controls"> </button>
+        <button id="window-button-maximize" class="control-button"> <img src="../../img/maximize-icon.svg" class="controls"> </button>
+        <button id="window-button-close" class="control-button control-button-close"> <img src="../../img/close-icon.svg" class="controls"> </button>
       </section>
     </section>
     <section class="path-bar">
@@ -86,4 +86,5 @@
     </section>
   </main>
 </body>
+<script src="renderer.js"></script>
 </html>
