[add] folder browsing, file opening

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -39,7 +39,7 @@
     </section>
     <section class="path-bar">
       <section class="control-arrows">
-        <button class="back-arrow path-control-button arrow-img-active">
+        <button id="back-arrow" class="back-arrow path-control-button arrow-img-active">
           <img src="../../img/left-arrow.svg" style="margin-right: 2px;">
         </button>
         <button class="forward-arrow path-control-button arrow-img-inactive">
@@ -62,7 +62,7 @@
       </section>
     </section>
     <section class="contents-panel">
-      <div class="contents-wrapper">
+      <div id="contents" class="contents-wrapper">
         <button class="item">
           <img src="../../img/folder.svg">
           <p class="name">PrefLogs</p>
