[fix] going up one dirrectory, [add] default folder

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -65,7 +65,11 @@
       <div id="contents" class="contents-wrapper">
         <button class="item">
           <img src="../../img/folder.svg">
-          <p class="name">PrefLogs</p>
+          <p class="name">If you see this</p>
+        </button>
+        <button class="item">
+          <img src="../../img/folder.svg">
+          <p class="name">smth broke</p>
         </button>
         
       </div>
