[add] quick access functionality

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -14,12 +14,13 @@
     <div class="logo"></div>
     <section id="quick-access">
       <header>Quick access</header>
-      <button class="navbar-list-element"><img src="../../img/desktop-icon.svg" class="navbar-icon">Desktop</button>
-      <button class="navbar-list-element"><img src="../../img/documents-icon.svg" class="navbar-icon">Documents</button>
-      <button class="navbar-list-element"><img src="../../img/music-icon.svg" class="navbar-icon">Music</button>
-      <button class="navbar-list-element"><img src="../../img/pictures-icon.svg" class="navbar-icon">Pictures</button>
-      <button class="navbar-list-element"><img src="../../img/videos-icon.svg" class="navbar-icon">Videos</button>
-      <button class="navbar-list-element"><img src="../../img/downloads-icons.svg" class="navbar-icon">Downloads</button>
+      <button id="quick-access-desktop" class="navbar-list-element"><img src="../../img/desktop-icon.svg" class="navbar-icon">Desktop</button>
+      <button id="quick-access-documents" class="navbar-list-element"><img src="../../img/documents-icon.svg" class="navbar-icon">Documents</button>
+      <button id="quick-access-music" class="navbar-list-element"><img src="../../img/music-icon.svg" class="navbar-icon">Music</button>
+      <button id="quick-access-pictures" class="navbar-list-element"><img src="../../img/pictures-icon.svg" class="navbar-icon">Pictures</button>
+      <button id="quick-access-videos" class="navbar-list-element"><img src="../../img/videos-icon.svg" class="navbar-icon">Videos</button>
+      <button id="quick-access-downloads" class="navbar-list-element"><img src="../../img/downloads-icons.svg" class="navbar-icon">Downloads</button>
+      <button id="quick-access-trash" class="navbar-list-element"><img src="../../img/trash-icon.svg" class="navbar-icon">Trash</button>
     </section>
     <section id="devices">
       <header>This PC</header>
