[add] drives detection

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -24,14 +24,12 @@
     </section>
     <section id="devices">
       <header>This PC</header>
-      <button class="navbar-list-element"><img src="../../img/Drive.svg" class="navbar-icon">Local Disk (C:)</button>
-      <button class="navbar-list-element"><img src="../../img/Drive.svg" class="navbar-icon">Local Disk (D:)</button>
     </section>
   </nav>
 
   <main id="main-content">
     <section class="top-bar">
-      <span class="current-folder">Local Disk(C:)</span>
+      <span id="current-folder">This Drive</span>
       <section class="controls-wrapper">
         <button id="window-button-minimize" class="control-button"> <img src="../../img/minimize-icon.svg" class="controls"> </button>
         <button id="window-button-maximize" class="control-button"> <img src="../../img/maximize-icon.svg" class="controls"> </button>
