[add] items count

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -75,8 +75,8 @@
     </section>
     <section class="footer">
       <section class="info">
-        <p id="items-ammount">4 items</p>
-        <p id="items-selected">1 item selected</p>
+        <p id="items-amount">ERROR items</p>
+        <!-- <p id="items-selected">1 item selected</p> -->
       </section>
       <section class="buttons">
         <button class="view-button">
