[add] controll arrows functionality

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -41,11 +41,11 @@
         <button id="back-arrow" class="back-arrow path-control-button arrow-img-active">
           <img src="../../img/left-arrow.svg" style="margin-right: 2px;">
         </button>
-        <button class="forward-arrow path-control-button arrow-img-inactive">
+        <button id="forward-arrow" class="forward-arrow path-control-button arrow-img-inactive">
           <img src="../../img/right-arrow.svg" style="margin-left: 2px;">
         </button>
 
-        <button class="up-arrow path-control-button arrow-img-inactive">
+        <button id="up-arrow" class="up-arrow path-control-button arrow-img-inactive">
           <img src="../../img/up-directory-icon.svg">
         </button>
       </section>
