[add] interactable path functionality

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -49,10 +49,10 @@
           <img src="../../img/up-directory-icon.svg">
         </button>
       </section>
-      <section class="path-wrapper">
-        <button class="path-button">This PC</button>
+      <section id="path-wrapper" class="path-wrapper">
+        <button class="path-button">ERROR</button>
         <span class="path-arrow"><img src="../../img/right-arrow.svg"></span>
-        <button class="path-button">Local Disk (C:)</button>
+        <button class="path-button">Local Disk (ERROR:)</button>
         <span class="path-arrow"><img src="../../img/right-arrow.svg"></span>
       </section>
       <section class="search-bar">
