[add] maximizing logic

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <nav id="navbar">
+  <nav id="navbar" class="navbar-not-maximized">
     <div class="logo"></div>
     <section id="quick-access">
       <header>Quick access</header>
@@ -27,7 +27,7 @@
     </section>
   </nav>
 
-  <main id="main-content">
+  <main id="main-content" class="mainbar-not-maximized">
     <section class="top-bar">
       <span id="current-folder">This Drive</span>
       <section class="controls-wrapper">
