[refactor] this mess

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <nav id="navbar" class="navbar-not-maximized">
-    <div class="logo"></div>
+    <div class="logo">fzfexplorer</div>
     <section id="quick-access">
       <header>Quick access</header>
       <button id="quick-access-desktop" class="navbar-list-element"><img src="../../img/desktop-icon.svg" class="navbar-icon">Desktop</button>
